[tool.poetry]
name = "numerical_expressions"
version = "0.1.0"
description = "A template to automate different ways of writing about numbers"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.0.3"
num2words = "^0.5.13"
fraction = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
